--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/method-override": "^0.0.32",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.0.0",
+    "prettier": "2.7.1",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
